Fix usage bar spacing in system monitor
Reduced vertical margin on process rows from 0px to 1px to create tighter, more consistent spacing between CPU/GPU/RAM usage bars

--- a/eww.css
+++ b/eww.css
@@ -411,7 +411,7 @@
   background-color: #313244;
   padding: 2px 10px;
   border-radius: 7px;
-  margin: 0px;
+  margin: 1px 0;
 }
 
 .process-row:hover {
